syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tech_thrive_catalyst.grpc_client.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}